# bazel-swc-outs

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  in.ts  package-lock.json  package.json  tsconfig.json
